# microservice-testing

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  commitlint.config.js  docker-compose.yml  main.py  package-lock.json  package.json  prestart.py  prestart.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 73528c752942_remove_token_unique_constraint.py  a146bd4ff65b_move_from_pickle_to_json_type.py  daeb6373f743_add_deprecated_field_to_spec_table.py
app/: application.py  backend_pre_start.py  data.py  main.py
app/api/: api.py  api_root.py
app/core/: auth.py  contract.json  contract_schema.json  contract_validator.py  deps.py  security.py  settings.py  spec_validator.py  token.py
app/db/: base.py  base_class.py  init_db.py  session.py  session_async.py
app/exceptions/: already_exists_error.py  credentials_error.py  deprecated_usage_error.py  invalid_data_error.py  no_access_error.py  not_found_error.py  not_found_exception.py  validation_exception.py
app/models/: contract.py  spec.py  user.py
app/repositories/: __init__.py  base_repository.py  base_repository_async.py  contract.py  contract_repository.py  contract_repository_async.py  contracts_repository.py  spec_repository.py  spec_repository_async.py  user_repository.py  user_repository_async.py
app/schemas/: __init__.py  contract.py  spec.py  user.py
app/services/: auth_service.py  contract_service.py  spec_service.py  user_service.py  validation_service.py
app/settings/: db_settings.py  route_settings.py
core/: auth.py  contract_validator.py
db/: session.py
doc/: Report.url  ~$тз.docx  тз.docx
doc/refs/: arch.drawio  arch_v2.drawio  save_contract_sequence_diagram.drawio  save_contract_v2.drawio  save_spec_sequence_diagram.drawio  ~$arch.drawio.bkp  ~$arch_v2.drawio.bkp  ~$save_contract_sequence_diagram.drawio.bkp  ~$save_contract_v2.drawio.bkp  рк.drawio  (+1 more)
models/: Contract.py  Result.py  Token.py
tests/: test_new.py
(+15 files in other folders)
