[tool.poetry]
name = "microservice-testing"
version = "0.1.0"
description = ""
authors = ["Anton Orekhovskiy <anton.o.0619@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
jsonschema = "^4.6.0"
SQLAlchemy = "^1.4.37"
tenacity = "^8.0.1"
alembic = "^1.8.0"
PyYAML = "^6.0"
uvicorn = "^0.17.6"
isort = "^5.10.1"
black = "^22.3.0"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
mypy = "^0.961"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
