[tool.poetry]
name = "microservice-testing"
version = "0.1.0"
description = ""
authors = ["Anton Orekhovskiy <anton.orekhovskiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
jsonschema = "^4.6.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
tenacity = "^8.0.1"
alembic = "^1.8.0"
PyYAML = "^6.0"
uvicorn = "^0.17.6"
isort = "^5.10.1"
black = "^22.3.0"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
mypy = "^0.961"
pytest = "^7.1.2"
flake8-bugbear = "^22.4.25"
flake8-quotes = "^3.3.1"
flake8-pytest-style = "^1.6.0"
asyncpg = "^0.25.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
bcrypt = "^3.2.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
